feat: API Key flow + test fixes + cleanup