@@ -1,6 +1,7 @@
 package com.qrpro.infrastructure.security;
 
-import com.qrpro.domain.repository.UserRepositoryPort;
+import com.qrpro.application.service.ApiKeyService;
+import com.qrpro.domain.model.User;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -14,35 +15,37 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
 @Slf4j
 @Component
 @RequiredArgsConstructor
 public class ApiKeyAuthenticationFilter extends OncePerRequestFilter {
 
-    private final UserRepositoryPort userRepositoryPort;
+    private final ApiKeyService apiKeyService;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    FilterChain chain) throws ServletException, IOException {
+                                      HttpServletResponse response,
+                                      FilterChain filterChain) throws ServletException, IOException {
         String apiKey = request.getHeader("X-API-Key");
 
-        if (apiKey != null && !apiKey.isBlank()
-                && SecurityContextHolder.getContext().getAuthentication() == null) {
-            userRepositoryPort.findByApiKey(apiKey).ifPresent(user -> {
-                if (user.active()) {
-                    UsernamePasswordAuthenticationToken auth =
-                            new UsernamePasswordAuthenticationToken(
-                                    user.id().toString(), null,
-                                    Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER")));
-                    SecurityContextHolder.getContext().setAuthentication(auth);
-                    log.debug("Authenticated via API Key: userId={}", user.id());
-                }
-            });
+        if (apiKey != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+            Optional<User> userOpt = apiKeyService.authenticate(apiKey);
+            if (userOpt.isPresent()) {
+                User user = userOpt.get();
+                UsernamePasswordAuthenticationToken auth =
+                    new UsernamePasswordAuthenticationToken(
+                        user.id().toString(),
+                        null,
+                        List.of(new SimpleGrantedAuthority("ROLE_USER"))
+                    );
+                SecurityContextHolder.getContext().setAuthentication(auth);
+                log.debug("API Key authenticated: user={}", user.username());
+            }
         }
 
-        chain.doFilter(request, response);
+        filterChain.doFilter(request, response);
     }
 }
